JS-136: Require Java 5 Converted from new Integer to Integer.valueOf. Also for Character, Float, and Long.